# rental-assistant-bot

./: .gitignore  pyproject.toml  run.py
app/: config.py
app/database/: db.py  models.py
app/handlers/: apartments.py  sets.py  start.py
app/keyboards/: actions_keyboard.py  apartments_keyboard.py  extra_keyboards.py  main_menu.py  settings_keyboard.py  tariffs_keyboard.py
app/middlewares/: auth.py
app/notifications/: payment_tasks.py  scheduler.py
app/services/: apartment_service.py  contact_service.py  log_service.py  meter_readings_service.py  tariff_service.py  utils.py
app/states/: comment_states.py  meter_states.py  pay_states.py  tariff_states.py
