[project]
name = "telegramrentbot"
version = "0.1.0"
description = ""
authors = [
    {name = "KruglykhinPavel"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "aiogram (>=3.28.2,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
